--- a/BeerFermControlWEB/pom.xml
+++ b/BeerFermControlWEB/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>spring-security-web</artifactId>
             <version>5.8.4</version>
         </dependency>
+        <dependency>  
+            <groupId>org.hibernate.validator</groupId>  
+            <artifactId>hibernate-validator</artifactId>  
+            <version>6.2.5.Final</version>  
+        </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
