--- a/BeerFermControlWEB/src/main/webapp/WEB-INF/web.xml
+++ b/BeerFermControlWEB/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,14 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/applicationContext.xml</param-value>
     </context-param>
+    <filter>
+        <filter-name>LoginHandlerFilter</filter-name>
+        <filter-class>org.xer.beerfermcontrol.web.util.LoginHandlerFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>LoginHandlerFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
@@ -25,5 +33,9 @@
     <servlet-mapping>    
         <servlet-name>spring</servlet-name>    
         <url-pattern>/</url-pattern>    
-    </servlet-mapping>  
+    </servlet-mapping>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error</location>
+    </error-page>
 </web-app>
