--- a/BeerFermControlWEB/pom.xml
+++ b/BeerFermControlWEB/pom.xml
@@ -78,6 +78,11 @@
             <artifactId>log4j-core</artifactId>
             <version>2.20.0</version>
         </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.5</version>
+        </dependency>
     </dependencies>
     
     <build>
